[package]
name = "gist-fs"
version = "0.1.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
crossbeam = "0.7"
dotenv = "0.15"
futures = "0.3"
indexmap = "1"
libc = "0.2"
pico-args = "0.3"
polyfuse = "0.2"
polyfuse-tokio = "0.1"
tokio = { version = "0.2", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = "0.1"

gist-client = { path = "gist-client" }
node-table = { path = "node-table" }

[lib]
name = "gist_fs"
path = "src/lib.rs"

[[bin]]
name = "gist-fs"
path = "src/main.rs"
doc = false

[workspace]
members = [
  ".",
  "gist-client",
  "node-table",
]
