[package]
name = "gist-client"
version = "0.1.0"
publish = false
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = [ "serde" ] }
http = "0.1"
isahc = "0.8"
mime = "0.3"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tracing = "0.1"
